Add Automatic Year Update Using JS @footer

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     To read more about this exceptional personality, visit his
                     <a id="tribute-link" href="https://en.m.wikipedia.org/wiki/Kwame_Nkrumah" target="_blank">Wikipedia entry</a></strong>
                 </P>
-                <p class="footer">&copy; 2024 Tribute Page. All rights reserved.</p>
+                <p class="footer">&copy; <span id="year"></span> Tribute Page. All rights reserved.</p>
                 <!--FOOTER SECTION BEGINS ENDS-->
         </div>
-
     </main>
+    <script src="/script.js"></script>
 </body>
 </html>
